2007-04-12  Jürg Billeter  <j@bitron.ch>

	* vala/valatypereference.vala: add is_null property
	* vala/valasemanticanalyzer.vala: fix type analysis in conditional and
	  parenthesized expressions, fixes bug 428368
	* vapi/glib-2.0.vala: don't mark GLib.Object and GLib.InitiallyUnowned
	  as abstract

2007-04-12  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix warning when using interface
	  properties

2007-04-06  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: use yyleng instead of strlen
	* vala/valainterfacewriter.vala: don't write unnecessary attributes to
	  reduce parse time
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  remove unnecessary attributes to reduce parse time

2007-04-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valaforstatement.vala: support
	  temporary variables in initializers and iterators of for statements
	* vala/valacodegenerator.vala: support freeing generic types
	* vala/parser.y, vala/valacodevisitor.vala,
	  vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala,
	  vala/valareferencetransferexpression.vala: add reference transfer
	  expressions, e.g. `#var'
	* vala/vala.h, vala/Makefile.am: update

2007-04-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: generate properties for destroy function
	  pointers in generic types

2007-04-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: pass destroy function pointer when
	  creating instances of generic types
	* vala/valaclass.vala: add get_type_parameters method

2007-04-04  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: improve cast support
	* vala/valasemanticanalyzer.vala: fix ownership handling of local arrays
	* vala/valacodegenerator.vala: skip code generation for static
	  interfaces, downgrade generic management support message to warning
	* vala/valacallback.vala: support callbacks as property type

2007-04-04  Jürg Billeter  <j@bitron.ch>
